# weaver

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  README-en.md  README.md  makefile
.github/: dependabot.yml
docs/specs/: volume.md
libonyxia/: Cargo.toml
libonyxia/src/: directory.rs  error.rs  index.rs  lib.rs  macros.rs  needle.rs  volume.rs
libonyxia/src/directory/: mod.rs
libonyxia/src/error/: directory_error.rs  index_error.rs  mod.rs  volume_error.rs
libonyxia/src/file/: mod.rs
libonyxia/src/index/: mod.rs
libonyxia/src/needle/: mod.rs
libonyxia/src/server/: mod.rs
libonyxia/src/store/: mod.rs  volume.rs
libonyxia/src/utils/: mod.rs  size.rs  strings.rs
onyxia-cache/: Cargo.toml
onyxia-cache/src/: main.rs
onyxia-directory/: Cargo.toml  Rocket.toml
onyxia-directory/src/: main.rs  server.rs
onyxia-examples/: Cargo.toml  LICENSE
onyxia-examples/client/: Cargo.toml  main.rs
onyxia-examples/client/src/: main.rs
onyxia-examples/server/: Cargo.toml  main.rs
onyxia-examples/server/src/: main.rs
onyxia-gateway/: Cargo.toml
onyxia-gateway/src/: file.rs  main.rs  storage.rs
onyxia-proto/: Cargo.toml  build.rs
onyxia-proto/proto/directory/: directory.proto
onyxia-proto/proto/grpc/directory/: directory.proto
onyxia-proto/proto/grpc/store/: store.proto
onyxia-proto/proto/grpc/volume/: volume.proto
onyxia-proto/proto/volume/: volume.proto
onyxia-proto/src/: lib.rs
onyxia-proto/src/directory/: directory.rs  directory_grpc.rs  mod.rs
onyxia-proto/src/store/: mod.rs  store.rs  store_grpc.rs
onyxia-proto/src/volume/: mod.rs  volume.rs  volume_grpc.rs
onyxia-store/: Cargo.toml
onyxia-store/src/: client.rs  main.rs  server.rs
proto/: Cargo.toml  build.rs
proto/proto/: directory.proto  master.proto  storage.proto
services/directory/: Cargo.toml
services/directory/src/: main.rs
services/master/: Cargo.toml
services/master/src/: main.rs
services/storage/: Cargo.toml
services/storage/src/: main.rs
src/: lib.rs  macros.rs  main.rs
src/directory/: mod.rs  service.rs  storage.rs
src/directory2/: mod.rs
src/error/: directory_error.rs  index_error.rs  master_error.rs  mod.rs  needle_error.rs
src/libonyxia/: Cargo.toml
src/master/: server.rs  service.rs
src/node/: mod.rs
src/onyxia-directory/: Cargo.toml
src/onyxia-store/: Cargo.toml
src/onyxia-volume/: Cargo.toml
src/onyxia-volume/src/: main.rs
src/storage/: index.rs  mod.rs  server.rs  service.rs  storage.rs  volume.rs
src/store/: mod.rs  volume.rs
src/utils/: strings.rs
weaver/: Cargo.toml
weaver-directory/: Cargo.toml
weaver-directory/src/: main.rs  server.rs
weaver-master/: Cargo.toml
weaver-master/src/: main.rs  server.rs
weaver-proto/: Cargo.toml  build.rs
weaver-proto/proto/: directory.proto  master.proto  storage.proto  weaver.proto
weaver-proto/proto/store/: store.proto
weaver-proto/src/: directory.rs  lib.rs  master.rs  storage.rs  weaver.rs
weaver-storage/: Cargo.toml
weaver-storage/src/: client.rs  main.rs  server.rs
weaver-volume/: LICENSE
weaver-volume/src/: main.rs  server.rs
weaver/src/: lib.rs  macros.rs
weaver/src/directory/: service.rs
weaver/src/error/: directory_error.rs  mod.rs  storage_error.rs
weaver/src/master/: service.rs
weaver/src/needle/: mod.rs
weaver/src/node/: mod.rs
weaver/src/storage/: index.rs  mod.rs  service.rs  storage.rs  volume.rs  volume_file.rs  volume_iouring.rs  volumes.rs
weaver/src/utils/: size.rs
