[package]
name = "onyxiafs"
version = "0.1.0"
authors = ["divinerapier <poriter.coco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "libonyxia",
    "onyxia-cache",
    "onyxia-directory",
    "onyxia-store",
    "onyxia-gateway",
    "onyxia-proto",
]

## example grpc server/client

[[bin]]
name = "example-client"
path = "onyxia-proto/src/examples/client.rs"

[[bin]]
name = "example-server"
path = "onyxia-proto/src/examples/server.rs"
