[package]
name = "onyxiafs"
version = "0.1.0"
authors = ["divinerapier <poriter.coco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "libonyxia",
    "onyxia-cache",
    "onyxia-directory",
    "onyxia-store",
    "onyxia-gateway",
    "onyxia-proto",
    "onyxia-examples/client/",
    "onyxia-examples/server/",
]

## example grpc server/client

[[bin]]
name = "example-client"
path = "onyxia-examples/client/main.rs"

[[bin]]
name = "example-server"
path = "onyxia-examples/server/main.rs"

# [features]
# default = ["protobuf-codec", "secure"]
# protobuf-codec = ["protobuf"]
# prost-codec = ["prost", "bytes"]
# secure = ["grpcio-sys/secure"]
# openssl = ["secure", "grpcio-sys/openssl"]
# openssl-vendored = ["secure", "grpcio-sys/openssl-vendored"]
# no-omit-frame-pointer = ["grpcio-sys/no-omit-frame-pointer"]

# [dependencies]
# grpcio-sys = { version = "0.5.0-alpha" }
# libc = "0.2"
# futures = "^0.1.15"
# protobuf = { version = "2.0", optional = true }
# prost = { version = "0.5", optional = true }
# bytes = { version = "0.4.11", optional = true }
# log = "0.4"
