[package]
name = "libonyxia"
version = "0.1.0"
authors = ["divinerapier <poriter.coco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4.12"
byteorder = "1.3.2"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
tempfile = "3.1.0"
failure = "0.1.5"
log = "0.4.8"
env_logger = "0.6.2"
futures = "0.1.28"
grpcio = {  features = ["secure"], version = "0.5.0-alpha.3", default-features = false }
srand = "0.4.0"
