[package]
name = "onyxia-gateway"
version = "0.1.0"
authors = ["divinerapier <poriter.coco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-web = "1.0.5"
actix-multipart = "0.1.2"
actix-http = "0.2.7"
bytes = "0.4.12"
log = "0.4.8"
futures = "0.1.28"
env_logger = "0.6.2"
