[package]
name = "onyxia-proto"
version = "0.1.0"
authors = ["divinerapier <poriter.coco@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
protobuf-build = { version = "0.8", default-features = false }
walkdir = "2.2.9"


[features]
default = ["protobuf-codec"]
protobuf-codec = ["protobuf-build/protobuf-codec"]
prost-codec = ["prost", "prost-derive", "bytes", "lazy_static", "protobuf-build/prost-codec"]

[dependencies]
bytes = { version = "0.4.11", optional = true }
lazy_static = { version = "1.3.0", optional = true }
prost = { version = "0.5", optional = true }
prost-derive = { version = "0.5", optional = true }
protobuf = "2"


[[bin]]
name = "example-client"
path = "src/examples/client.rs"

[[bin]]
name = "example-server"
path = "src/examples/server.rs"
