[package]
name = "onyxia-proto"
version = "0.1.0"
authors = ["divinerapier <poriter.coco@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
protobuf-build = { version = "0.8", default-features = false }
grpcio-compiler = { version = "0.5.0-alpha.2", default-features = false }
walkdir = "2.2"

[features]
default = ["protobuf-codec"]
protobuf-codec = ["grpcio/protobuf-codec", "grpcio-compiler/protobuf-codec", "protobuf-build/grpcio-protobuf-codec"]
prost-codec = ["prost-derive", "bytes", "lazy_static", "grpcio/prost-codec", "prost", "grpcio-compiler/prost-codec", "protobuf-build/grpcio-prost-codec"]

[dependencies]
futures = "0.1"
grpcio = {  features = ["secure"], version = "0.5.0-alpha.3", default-features = false }
bytes = { version = "0.4", optional = true }
prost = { version = "0.5", optional = true }
prost-derive = { version = "0.5", optional = true }
protobuf = "2"
lazy_static = { version = "1.3", optional = true }


[[bin]]
name = "example-client"
path = "src/examples/client.rs"

[[bin]]
name = "example-server"
path = "src/examples/server.rs"
