[package]
name = "weaver"
version = "0.1.0"
authors = ["divinerapier <poriter.coco@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
tempfile = "3.1.0"
failure = "0.1.5"
srand = "0.4.0"
rand = "0.8.0"
reservoir = "*"
rose_tree = {git = "https://github.com/divinerapier/rose_tree-rs", branch = "master"}

# local
proto = {path = "../proto", version = "0.1.0"}

# transport and protocol
tonic = { version = "0.1.1", features = ["tls"] }
bytes = "0.4"
prost = "0.6"

tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"]}
async-stream = "0.2"
http = "0.2"
tower = "0.3"

# logger
env_logger = "0.6.2"
log = "0.4.8"

# date and time
chrono = { version = "0.4", features = ["serde"] }

# async std
async-std = {version = "1.5", features = ["std"]}
