[package]
name = "weaver"
version = "0.1.0"
authors = ["divinerapier <poriter.coco@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
tempfile = "3.1.0"
failure = "0.1.5"
srand = "0.4.0"
rand = "0.8.4"
reservoir = "*"
rose_tree = {git = "https://github.com/divinerapier/rose_tree-rs", branch = "master"}
tokio-stream = "0.1.8"
thiserror = "1.0.30"

# local
proto = {path = "../proto", version = "0.1.0"}

# transport and protocol
tonic = { version = "0.6.1", features = ["tls"] }
bytes = "1.1.0"
prost = "0.9.0"

tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", default-features = false, features = ["alloc"]}
async-stream = "0.3.2"
http = "0.2"
tower = "0.4.11"

# logger
env_logger = "0.9.0"
log = "0.4.8"

# date and time
chrono = { version = "0.4", features = ["serde"] }

# async std
async-std = {version = "1.5", features = ["std"]}
