[package]
name = "example-client"
version = "0.1.0"
authors = ["divinerapier <poriter.coco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local protobuf
onyxia-proto = {path = "../../onyxia-proto", version = "0.1.0"}

# required by examples
env_logger = "0.6.2"
log = "0.4.8"
grpcio-sys = { version = "0.5.0-alpha" }
grpcio = {  features = ["secure"], version = "0.5.0-alpha.3", default-features = false }
futures = "*"
