[package]
name = "master"
version = "0.1.0"
authors = ["divinerapier <poriter.coco@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local
proto = {path = "../../proto", version = "0.1.0"}
weaver = {path = "../../weaver", version = "0.1.0"}

# transport and protocol
tonic = { version = "0.6.1", features = ["tls"] }
bytes = "1.1.0"
prost = "0.9.0"
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", default-features = false, features = ["alloc"]}
async-stream = "0.3.2"
http = "0.2"
tower = "0.4.11"

# logger
env_logger = "0.9.0"
log = "0.4.8"
