[package]
name = "storage"
version = "0.1.0"
authors = ["divinerapier <poriter.coco@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = {path = "../../proto", version = "0.1.0"}
weaver = {path = "../../weaver", version = "0.1.0"}

tonic = { version = "0.1.1", features = ["tls"] }
bytes = "0.4"
prost = "0.6"

tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"]}
async-stream = "0.2"
http = "0.2"
tower = "0.3"

env_logger = "0.6.2"
log = "0.4.8"
md-5 = "0.9.0"

clap = "2.33.0"
